--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,6 @@
 title: eustasy Releases
+description: See releases and statuses for eustasy repositories
+gravatar: a7b95df33ae5596f1ad16115459e493c
+twitter: eustasyOrg
 markdown: kramdown
 theme: jekyll-theme-minimal
