--- a/.github/workflows/unreleased_commits.yml
+++ b/.github/workflows/unreleased_commits.yml
@@ -25,7 +25,7 @@ jobs:
         pip install PyGithub
     - name: Run script and commit changes
       run: |
-        python unreleased_commits.py
+        python _generators/unreleased_commits.py
         echo "Setting up git credentials..."
         git remote set-url origin https://x-access-token:"$GITHUB_TOKEN"@github.com/"$GITHUB_REPOSITORY".git
         git config --global user.email "actions@github.com"
