--- a/.github/workflows/normal_checks.yml
+++ b/.github/workflows/normal_checks.yml
@@ -3,7 +3,7 @@ name: Normal Checks
 on:
   schedule:
     # * is a special character in YAML so you have to quote this string
-    - cron:  '0/20 * * * *'
+    - cron:  '20 0/3 * * *'
 
 jobs:
   build:
