--- a/.github/workflows/list_repositories.yml
+++ b/.github/workflows/list_repositories.yml
@@ -4,9 +4,9 @@ on:
   push:
     branches:
       - main
-  #schedule:
+  schedule:
     # * is a special character in YAML so you have to quote this string
-    #- cron:  '0/20 * * * *'
+    - cron:  '0 0/3 * * *'
 
 jobs:
   build:
