--- a/.github/workflows/license_year.yml
+++ b/.github/workflows/license_year.yml
@@ -20,6 +20,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install PyGithub
+        pip install pyyaml
     - name: Run script and commit changes
       run: |
         python _generators/license_year.py
