--- a/.github/workflows/unreleased_commits.yml
+++ b/.github/workflows/unreleased_commits.yml
@@ -20,6 +20,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install PyGithub
+        pip install pyyaml
         pip install timeago
     - name: Run script and commit changes
       run: |
