--- a/.github/workflows/list_repositories.yml
+++ b/.github/workflows/list_repositories.yml
@@ -1,6 +1,9 @@
 name: List Repositories
 
 on:
+  push:
+    branches:
+      - main
   schedule:
     # * is a special character in YAML so you have to quote this string
     - cron:  '0 0/3 * * *'
