--- a/.github/workflows/licenses.yml
+++ b/.github/workflows/licenses.yml
@@ -1,4 +1,4 @@
-name: License Year
+name: Licenses
 
 on:
 #  push:
@@ -26,7 +26,7 @@ jobs:
         pip install pyyaml
     - name: Run script and commit changes
       run: |
-        python _generators/license_year.py
+        python _generators/licenses.py
         echo "Setting up git credentials..."
         git remote set-url origin https://x-access-token:"$GITHUB_TOKEN"@github.com/"$GITHUB_REPOSITORY".git
         git config --global user.email "actions@github.com"
