--- a/.github/workflows/licenses.yml
+++ b/.github/workflows/licenses.yml
@@ -1,9 +1,9 @@
 name: Licenses
 
 on:
-#  push:
-#    branches:
-#      - main
+  push:
+    branches:
+      - main
   schedule:
     # * is a special character in YAML so you have to quote this string
     - cron:  '20 0/3 * * *'
