--- a/.github/workflows/list_repositories.yml
+++ b/.github/workflows/list_repositories.yml
@@ -3,7 +3,7 @@ name: List Repositories
 on:
   schedule:
     # * is a special character in YAML so you have to quote this string
-    - cron:  '0 0/3 * * *'
+    - cron:  '5 */3 * * *'
 
 jobs:
   build:
