--- a/.github/workflows/merge_types.yml
+++ b/.github/workflows/merge_types.yml
@@ -1,9 +1,9 @@
 name: Merge Types
 
 on:
-  push:
-    branches:
-      - main
+#  push:
+#    branches:
+#      - main
   schedule:
     # * is a special character in YAML so you have to quote this string
     - cron:  '25 0/3 * * *'
