--- a/.github/workflows/normal_checks.yml
+++ b/.github/workflows/normal_checks.yml
@@ -1,9 +1,12 @@
 name: Normal Checks
 
 on:
+#  push:
+#    branches:
+#      - main
   schedule:
     # * is a special character in YAML so you have to quote this string
-    - cron:  '15 0/3 * * *'
+    - cron:  '15 0 * * *'
 
 jobs:
   build:
