--- a/.github/workflows/unreleased_commits.yml
+++ b/.github/workflows/unreleased_commits.yml
@@ -1,9 +1,12 @@
 name: Unreleased Commits
 
 on:
+#  push:
+#    branches:
+#      - main
   schedule:
     # * is a special character in YAML so you have to quote this string
-    - cron:  '20 0/3 * * *'
+    - cron:  '20 0 * * *'
 
 jobs:
   build:
