--- a/.github/workflows/merge_types.yml
+++ b/.github/workflows/merge_types.yml
@@ -6,7 +6,7 @@ on:
 #      - main
   schedule:
     # * is a special character in YAML so you have to quote this string
-    - cron:  '25 0 * * *'
+    - cron:  '25 * * * *'
 
 jobs:
   build:
