--- a/.github/workflows/licenses.yml
+++ b/.github/workflows/licenses.yml
@@ -6,7 +6,7 @@ on:
 #      - main
   schedule:
     # * is a special character in YAML so you have to quote this string
-    - cron:  '10 0 * * *'
+    - cron:  '10 * * * *'
 
 jobs:
   build:
